# smart-license-plate-recognition

./: .gitignore  .gitmodules  README.md  智能车牌检测识别系统-项目规划.md
algorithms/: README.md  requirements.txt
algorithms/configs/: model_config.yaml
algorithms/detector/: LicensePlateDetector.py  __init__.py  detection_result.py  detector.py  license_plate_detector.py
algorithms/inference/: run_inference.py
algorithms/pipelines/: plate_pipeline.py
algorithms/recognizer/: __init__.py  license_plate_recognizer.py  recognition_result.py  recognizer.py  test.py
algorithms/training/: README.md  plot_results.py  train.py
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/schemas/: recognition.py
backend/app/services/: license_plate_pipeline.py  recognition_service.py
backend/app/utils/: file_loader.py
data/: README.md
data/sqlite/: init.sql
deploy/: README.md
deploy/configs/: .env.example
deploy/docker/: Dockerfile.backend  docker-compose.yml
deploy/scripts/: run_algorithm_pipeline.sh  start_all.sh  start_backend.sh
deploy/systemd/: license-plate-backend.service
docs/: CHANGELOG.md  CHECKLIST.md  api-overview.md  architecture.md  deployment.md  development.md  references.md
docs/api/: overview.md
docs/architecture/: project-structure.md
docs/deployment/: deploy.md
docs/development/: setup.md
docs/references/: references.md
frontend/qt_client/: CMakeLists.txt  TEST_REPORT.md
frontend/qt_client/include/: AlgorithmServiceClient.h  MainWindow.h  RecognitionTypes.h  ResultExportService.h  VideoDisplayWidget.h  VideoStreamWorker.h
frontend/qt_client/include/api/: AlgorithmServiceClient.h
frontend/qt_client/include/app/: MainWindow.h
frontend/qt_client/include/core/: RecognitionTypes.h
frontend/qt_client/include/services/: ResultExportService.h
frontend/qt_client/include/widgets/: ImageGalleryWidget.h  ImagePreviewWidget.h
frontend/qt_client/include/workers/: VideoStreamWorker.h
frontend/qt_client/resources/: resources.qrc
frontend/qt_client/resources/styles/: app.qss  theme_enterprise_light.qss  theme_industrial_dark.qss  theme_minimal_dark.qss
frontend/qt_client/src/: AlgorithmServiceClient.cpp  MainWindow.cpp  ResultExportService.cpp  VideoDisplayWidget.cpp  VideoStreamWorker.cpp  main.cpp
frontend/qt_client/src/api/: AlgorithmServiceClient.cpp
frontend/qt_client/src/app/: MainWindow.cpp  main.cpp
frontend/qt_client/src/services/: ResultExportService.cpp
frontend/qt_client/src/widgets/: ImageGalleryWidget.cpp  ImagePreviewWidget.cpp  VideoDisplayWidget.cpp
frontend/qt_client/src/workers/: VideoStreamWorker.cpp
frontend/qt_client/tests/: tst_MainWindow.cpp
frontend/qt_client/ui/: MainWindow.ui
tests/algorithms/: test_ccpd_converter.py  test_detection_result.py  test_pipeline.py
tests/backend/: test_recognition.py
tools/: convert_ccpd_to_yolo.py  prepare_data.py
